instructions.Instructions.scala.error
Compilation error:
Instructions:4: error: not found: value brushup
brushup() 
^